hphp/hack/test/typecheck/new_inference/nothing/tparam.php.like_types.exp
File "tparam.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
File "tparam.php", line 4, characters 37-43:
Expected nothing
File "tparam.php", line 4, characters 30-30:
But got T
File "tparam.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
File "tparam.php", line 8, characters 37-39:
Expected int
File "tparam.php", line 8, characters 30-30:
But got T
File "tparam.php", line 13, characters 10-11:
Invalid return type (Typing[4110])
File "tparam.php", line 12, characters 38-41:
Expected null
File "tparam.php", line 12, characters 31-31:
But got T
